// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 58,
  "sha": "1ec2430b7df0ae34",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 30,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 97,
  "sha": "17968a53f4235b1f",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 54,
  "sha": "0440e0a1694f4697",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 25,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 63,
  "sha": "e9d9040367a00145",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 28,
  "canvases": 2,
  "inputs": 1,
  "lengthBucket": 71,
  "sha": "a36455392e268ed5",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 26,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 65,
  "sha": "8c23bdb1b60b040c",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 31,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 75,
  "sha": "d1387ab514623fde",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 30,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 73,
  "sha": "aa29b988c19b280a",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 68,
  "sha": "54310be398edfdaf",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 45,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 125,
  "sha": "bbcb4823a080fbfe",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 58,
  "sha": "6dea7cd133fe69e6",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 58,
  "sha": "20f68498c0e0ace0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 59,
  "sha": "500e4efd9d77d9f4",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 60,
  "sha": "dab1dcf04ea253d4",
  "svgs": 0,
}
`;
